# ztfidr3

./: README.md  pyproject.toml
src/ztfcosmoidr/: __init__.py  spectrum.py
src/ztfidr3/: io.py  lightcurve.py  sample.py  utils.py
