[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ztfidr3"
dynamic = ["version"]
description = "Simulating Transient in the sky and how to observe them"
readme = "README.md"
authors = [
    {name = "Mickael Rigault", email = "m.rigault@ipnl.in2p3.fr"}
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astronomy", "astrophysics"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
docs = ["nbsphinx"]
tests = ["pytest", "pytest-doctestplus", "pytest-cov"]


[project.urls]
Homepage = "https://github.com/MickaelRigault/ztfidr3"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ztfidr3 = ["config/*"]

[tool.sphinx]
source-dir = "docs/"
build-dir = "docs/_build"
all_files = true

[tool.setuptools.dynamic]
version = {attr = "ztfidr3.__version__"}


[tool.ruff]
include = ["*.py"]

[tool.ruff.lint]
# Skip unused variable rules (`F841`).
extend-ignore = ["F841", "E402"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
    # "--doctest-plus",
    # "--doctest-glob=*.md",
    # "--doctest-continue-on-failure"
]
testpaths = ["tests"]
norecursedirs = ["extra", "build"]
filterwarnings = [
    # action:message:category:module:lineno
    # "error",
    # "ignore:.*Call to deprecated Parameter testval.*:DeprecationWarning:pymc3",
    "ignore:.*Configuration file not found.*:Warning:dustmaps.config"
]

[tool.coverage.run]
source = ["ztfidr3"]
omit = ["tests/*"]

[tool.coverage.paths]
source = ["src/ztfidr3/", "*/site-packages/ztfidr3/"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover", # Have to re-enable the standard pragma
  "except ImportError", # Don't complain about packages we have installed
  "raise AssertionError", # Don't complain if tests don't hit assertion code
  "raise NotImplementedError",
  "'def main(.*):'", # Don't complain about script hooks
  "if __name__ == .__main__.:",
  "def _ipython_key_completions_", # Don't complain about IPython completion
]
